--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "license": "ISC",
   "dependencies": {
     "howler": "^2.1.2",
-    "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/preset-env": "^7.5.4",
+    "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^4.0.0-beta.7",
-    "style-loader": "^0.23.1"
+    "style-loader": "^0.23.1",
+    "webpack": "^4.35.3"
   }
 }
