--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "build": "npx webpack --config webpack.config.js",
-    "dev": "webpack-dev-server",
+    "build": "NODE_ENV='production' npx webpack --config webpack.config.js",
+    "dev": "NODE_ENV='development' webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -25,6 +25,7 @@
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^4.0.0-beta.7",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.35.3"
   }
 }
