--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "build": "NODE_ENV='production' npx webpack --config webpack.config.js",
+    "build": " npx webpack --mode=production --config webpack.config.js",
     "dev": "NODE_ENV='development' webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
