--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "grid",
+  "name": "jake-mini-sequencer",
   "version": "1.0.0",
-  "description": "",
+  "description": "Jakab's mini sequencer",
   "main": "src/index.js",
   "scripts": {
     "build": " npx webpack --mode=production --config webpack.config.js",
